Syahrul.MySkill.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>Syahrul Adrian Saputra</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../css/editor.css" rel="stylesheet">
@@ -32,41 +32,47 @@
             </li>
           </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">My Skill</h3>
       </div>
 
       <div class="jumbotron">
-        <h1 class="display-3">Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+          <img src="https://pin.it/40yFVAU" alt="photo profil "/>
+        <h1 class="display-3">Syahrul Adrian Saputra</h1>
+          <p class =" lead"> Introduction
+        <p class="lead">Hi, I want to introduce myself. I am Syahrul. I took this class because IT is now developing very rapidly, almost any activity uses IT, even though I have no experience and have never tried it in the world of Software Engineering but I'll just try it so I have a little experience, even though in the end seeing various code is unacceptable by my mind hehehe.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Tap for Hi</a></p>
       </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>Why do I want to learn to make websites</h4>
+          <ol>1. I want to make my first website
+2. I want to have my own website
+3. I want to be a web developer.</ol>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h5>Come on, connect and visit me on LinkedIn</h5>
+          <a>https://www.linkedin.com/in/syahrul-adrian-saputra-a2a964227</a>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h6>visit also on my instagram</h6>
+          <a>https://instagram.com/drianntt?igshid=ZDc4ODBmNjlmNQ==.</a>
         </div>
 
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>Why do I want to learn to make websites</h4>
+          <ol>1. I want to make my first website
+2. I want to have my own website
+3. I want to be a web developer.</ol>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h5>Come on, connect and visit me on LinkedIn</h5>
+          <a>https://www.linkedin.com/in/syahrul-adrian-saputra-a2a964227.</a>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h6>visit also on my instagram</h6>
+          <p>https://instagram.com/drianntt?igshid=ZDc4ODBmNjlmNQ==.</p>
         </div>
       </div>
 
       <footer class="footer">
-        <p>© Company 2017</p>
+        <p>6 Juli 2023</p>
       </footer>
 
     </div> <!-- /container -->
